[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[dynamic]
author = "Ahsan Ahmed" 
author_email = "ahsan.ahmed3246@gmail.com"

[metadata]
url = "https://libsodium.readthedocs.io/en/latest/"

[project]
dependencies = ["werkzeug", "pycryptodome", "furo", "Routes", "python-socketio", "eventlet", "websockets", "sonora", "grpcio", "grpcio-tools", "Jinja2"]
name = "libsodium"
version = "2.7.4"
description = "A simple web framework"
readme = "file: README.md"
classifiers = ["Programming Language", "Python", "3",
    "License", "OSI Approved", "MIT License",
    "Operating System", "OS Independent"]

[project.urls]
Docs = "https://libsodium.readthedocs.io/en/latest/"
Github = "https://github.com/libsodiumproject/sodium/"

[options]
python_requires = ">=3.6"
