[project]
dependencies = ["werkzeug", "pycryptodome", "furo", "Routes", "python-socketio", "eventlet", "websockets", "sonora", "grpcio", "grpcio-tools", "Jinja2"]
name = libsodium
version = 2.7.2
author = Ahsan Ahmed 
author_email = ahsan.ahmed3246@gmail.com
description = A simple web framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://libsodium.readthedocs.io/en/latest/
project_urls =
    Docs = https://libsodium.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 

python_requires = >=3.6

[options.packages.find]
where = src
